--- a/contacto.html
+++ b/contacto.html
@@ -9,17 +9,17 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>TIENDA WI</title>
+<title>CONTACTO | Pages | Gallery</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/fondo.png');"> 
+<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/fondo9.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -40,14 +40,6 @@ Licence URI: https://www.os-templates.com/template-terms
         </ul>
       </div>
       <!-- ################################################################################################ -->
-      <script type="text/javascript">
-var respuesta = confirm("BIENVENIDO");
-if (respuesta) {
-} else {
-    alert('=(');    
-}
-</script>
-      <!-- ################################################################################################ -->
     </div>
   </div>
   <!-- ################################################################################################ -->
@@ -57,23 +49,23 @@ if (respuesta) {
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">TIENDA WI</a></h1>
+        <h1><a href="../index.html">CONTACTO</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="index.html">INICIO</a></li>
-          <li><a class="drop" href="#">PRODUCTOS</a>
+          <li><a href="../index.html">INICIO</a></li>
+          <li class="active"><a class="drop" href="#">PRODUCTOS</a>
             <ul>
-              <li><a href="pages/coleccion2020.html">COLECCIÓN 2020</a></li>
-              <li><a href="pages/coleccion2019.html">COLECCIÓN 2019</a></li>
-              <li><a href="pages/wisport.html">WI SPORT</a></li>
-              <li><a href="pages/kidsyteens.html">KIDS & TEENS</a></li>
+              <li class="active"><a href="coleccion2020.html">COLECCIÓN 2020</a></li>
+              <li><a href="coleccion2019.html">COLECCIÓN 2019</a></li>
+              <li><a href="wisport.html">WI SPORT</a></li>
+              <li><a href="kidsyteens.html">KIDS & TEENS</a></li>
             </ul>
           </li>
-          <li><a href="pages/galeriadefotos.html">GALERÍA DE FOTOS</a></li>
-          <li><a href="pages/iniciarsesion.html">INICIAR SESIÓN</a></li>
-          <li><a href="pages/registrarse.html">REGISTRARSE</a></li>
+          <li><a href="galeriadefotos.html">GALERÍA DE FOTOS</a></li>
+          <li><a href="iniciarsesion.html">INICIAR SESIÓN</a></li>
+          <li><a href="registrarse.html">REGISTRARSE</a></li>
         </ul>
       </nav>
       <!-- ################################################################################################ -->
@@ -83,22 +75,13 @@ if (respuesta) {
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper">
-    <div id="pageintro" class="hoc clear"> 
+    <section id="breadcrumb" class="hoc clear"> 
       <!-- ################################################################################################ -->
-      <article>
-        <div>
-          <p class="heading">Tienda de bikinis,ropa deportiva y más.</p>
-          <h2 class="heading">Bienvenido a Tienda Wi.</h2>
-        </div>
-        <footer>
-          <ul class="nospace inline pushright">
-            <li><a class="btn inverse" href="pages/contacto.html">CONTACTO</a></li>
-            <li><a class="btn" href="pages/ubicacion.html">UBICACIÓN</a></li>
-          </ul>
-        </footer>
-      </article>
+      
       <!-- ################################################################################################ -->
-    </div>
+      <h6 class="heading">CONTACTANOS A TRAVÉS DE CUALQUIERA DE NUESTRAS REDES SOCIALES:</h6>
+      <!-- ################################################################################################ -->
+    </section>
   </div>
   <!-- ################################################################################################ -->
 </div>
@@ -110,21 +93,98 @@ if (respuesta) {
   <main class="hoc container clear"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
-    <h2>MÁS INFORMACIÓN SOBRE TIENDA WI:</h2>
-    <iframe width="677" height="381" src="https://www.youtube.com/embed/6vtJIecnfe4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="content"> 
+      <!-- ################################################################################################ -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {margin:0;height:2000px;right: 50%}
+
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+
+.linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.content {
+  margin-left: 75px;
+  font-size: 30px;
+}
+</style>
+<body>
+
+<div class="icon-bar">
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
+  <a href="#" class="google"><i class="fa fa-google"></i></a> 
+  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+</div>
+      <!-- ################################################################################################ -->
+      <!-- ################################################################################################ -->
+      
+      <!-- ################################################################################################ -->
+    </div>
+    <!-- ################################################################################################ -->
+    <!-- / main body -->
+    <div class="clear"></div>
+  </main>
+</div>
+<!-- ################################################################################################ -->
+<div class="wrapper row4">
+  <footer id="footer" class="hoc clear"> 
+    <!-- ################################################################################################ -->
+    <a href="#top"><p align=center><strong></strong></a></p>
+    <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <!-- ################################################################################################ -->
   </footer>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <a href="#top"><p align=center><strong></strong></a></p>
-    <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <!-- ################################################################################################ -->
   </div>
 </div>
@@ -133,8 +193,8 @@ if (respuesta) {
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="../layout/scripts/jquery.min.js"></script>
+<script src="../layout/scripts/jquery.backtotop.js"></script>
+<script src="../layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
