--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -9,17 +9,17 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>TIENDA WI</title>
+<title> INICIAR SESIÓN| Pages | Full Width</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/fondo.png');"> 
+<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/fondo7.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -40,14 +40,6 @@ Licence URI: https://www.os-templates.com/template-terms
         </ul>
       </div>
       <!-- ################################################################################################ -->
-      <script type="text/javascript">
-var respuesta = confirm("BIENVENIDO");
-if (respuesta) {
-} else {
-    alert('=(');    
-}
-</script>
-      <!-- ################################################################################################ -->
     </div>
   </div>
   <!-- ################################################################################################ -->
@@ -57,25 +49,27 @@ if (respuesta) {
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">TIENDA WI</a></h1>
+        <h1><a href="../index.html">INICIAR SESIÓN</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="index.html">INICIO</a></li>
-          <li><a class="drop" href="#">PRODUCTOS</a>
+          <li><a href="../index.html">INICIO</a></li>
+          <li class="active"><a class="drop" href="#">PRODUCTOS</a>
             <ul>
-              <li><a href="pages/coleccion2020.html">COLECCIÓN 2020</a></li>
-              <li><a href="pages/coleccion2019.html">COLECCIÓN 2019</a></li>
-              <li><a href="pages/wisport.html">WI SPORT</a></li>
-              <li><a href="pages/kidsyteens.html">KIDS & TEENS</a></li>
+              <li><a href="coleccion2020.html">COLECCIÓN 2020</a></li>
+              <li class="active"><a href="coleccion2019.html">COLECCIÓN 2019</a></li>
+              <li><a href="wisport.html">WI SPORT</a></li>
+              <li><a href="kidsyteens.html">KIDS & TEENS</a></li>
             </ul>
           </li>
-          <li><a href="pages/galeriadefotos.html">GALERÍA DE FOTOS</a></li>
-          <li><a href="pages/iniciarsesion.html">INICIAR SESIÓN</a></li>
-          <li><a href="pages/registrarse.html">REGISTRARSE</a></li>
+          <li><a href="galeriadefotos.html">GALERÍA DE FOTOS</a></li>
+          <li><a href="iniciarsesion.html">INICIAR SESIÓN</a></li>
+          <li><a href="registrarse.html">REGISTRARSE</a></li>
         </ul>
       </nav>
+      <a href="#top"><p align=center><strong></strong></a></p>
+      <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
       <!-- ################################################################################################ -->
     </header>
   </div>
@@ -83,22 +77,13 @@ if (respuesta) {
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper">
-    <div id="pageintro" class="hoc clear"> 
+    <section id="breadcrumb" class="hoc clear"> 
       <!-- ################################################################################################ -->
-      <article>
-        <div>
-          <p class="heading">Tienda de bikinis,ropa deportiva y más.</p>
-          <h2 class="heading">Bienvenido a Tienda Wi.</h2>
-        </div>
-        <footer>
-          <ul class="nospace inline pushright">
-            <li><a class="btn inverse" href="pages/contacto.html">CONTACTO</a></li>
-            <li><a class="btn" href="pages/ubicacion.html">UBICACIÓN</a></li>
-          </ul>
-        </footer>
-      </article>
+    
       <!-- ################################################################################################ -->
-    </div>
+      <h6 class="heading">INICIAR SESIÓN</h6>
+      <!-- ################################################################################################ -->
+    </section>
   </div>
   <!-- ################################################################################################ -->
 </div>
@@ -110,8 +95,25 @@ if (respuesta) {
   <main class="hoc container clear"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
-    <h2>MÁS INFORMACIÓN SOBRE TIENDA WI:</h2>
-    <iframe width="677" height="381" src="https://www.youtube.com/embed/6vtJIecnfe4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="content"> 
+      <!-- ################################################################################################ -->
+     <div class="cognito">
+<script src="https://services.cognitoforms.com/s/AYRifjJGDUe8Oibb5CfueA"></script>
+<script>Cognito.load("forms", { id: "1" });</script>
+</div>
+      <!-- ################################################################################################ -->
+    </div>
+    <!-- ################################################################################################ -->
+    <!-- / main body -->
+    <div class="clear"></div>
+  </main>
+</div>
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="wrapper row4">
+  <footer id="footer" class="hoc clear"> 
+    <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
   </footer>
 </div>
@@ -123,8 +125,6 @@ if (respuesta) {
     <!-- ################################################################################################ -->
     <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <a href="#top"><p align=center><strong></strong></a></p>
-    <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <!-- ################################################################################################ -->
   </div>
 </div>
@@ -133,8 +133,8 @@ if (respuesta) {
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="../layout/scripts/jquery.min.js"></script>
+<script src="../layout/scripts/jquery.backtotop.js"></script>
+<script src="../layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
