--- a/galeriadefotos.html
+++ b/galeriadefotos.html
@@ -9,17 +9,17 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>TIENDA WI</title>
+<title>GALERÍA DE FOTOS | Pages | Sidebar Right</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/fondo.png');"> 
+<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/fondo6.png');"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row0">
     <div id="topbar" class="hoc clear"> 
@@ -40,14 +40,6 @@ Licence URI: https://www.os-templates.com/template-terms
         </ul>
       </div>
       <!-- ################################################################################################ -->
-      <script type="text/javascript">
-var respuesta = confirm("BIENVENIDO");
-if (respuesta) {
-} else {
-    alert('=(');    
-}
-</script>
-      <!-- ################################################################################################ -->
     </div>
   </div>
   <!-- ################################################################################################ -->
@@ -57,25 +49,27 @@ if (respuesta) {
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">TIENDA WI</a></h1>
+        <h1><a href="../index.html">GALERÍA DE FOTOS</a></h1>
       </div>
       <!-- ################################################################################################ -->
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="index.html">INICIO</a></li>
-          <li><a class="drop" href="#">PRODUCTOS</a>
+          <li><a href="../index.html">INICIO</a></li>
+          <li class="active"><a class="drop" href="#">PRODUCTOS</a>
             <ul>
-              <li><a href="pages/coleccion2020.html">COLECCIÓN 2020</a></li>
-              <li><a href="pages/coleccion2019.html">COLECCIÓN 2019</a></li>
-              <li><a href="pages/wisport.html">WI SPORT</a></li>
-              <li><a href="pages/kidsyteens.html">KIDS & TEENS</a></li>
+              <li><a href="gallery.html">COLECCIÓN 2020</a></li>
+              <li><a href="full-width.html">COLECCIÓN 2019</a></li>
+              <li><a href="sidebar-left.html">WI SPORT</a></li>
+              <li class="active"><a href="sidebar-right.html">KIDS & TEENS</a></li>
             </ul>
           </li>
-          <li><a href="pages/galeriadefotos.html">GALERÍA DE FOTOS</a></li>
-          <li><a href="pages/iniciarsesion.html">INICIAR SESIÓN</a></li>
-          <li><a href="pages/registrarse.html">REGISTRARSE</a></li>
+          <li><a href="galeriadefotos.html">GALERÍA DE FOTOS</a></li>
+          <li><a href="iniciarsesion.html">INICIAR SESIÓN</a></li>
+          <li><a href="registrarse.html">REGISTRARSE</a></li>
         </ul>
       </nav>
+      <a href="#top"><p align=center><strong></strong></a></p>
+      <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
       <!-- ################################################################################################ -->
     </header>
   </div>
@@ -83,22 +77,113 @@ if (respuesta) {
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper">
-    <div id="pageintro" class="hoc clear"> 
+    <section id="breadcrumb" class="hoc clear"> 
       <!-- ################################################################################################ -->
-      <article>
-        <div>
-          <p class="heading">Tienda de bikinis,ropa deportiva y más.</p>
-          <h2 class="heading">Bienvenido a Tienda Wi.</h2>
-        </div>
-        <footer>
-          <ul class="nospace inline pushright">
-            <li><a class="btn inverse" href="pages/contacto.html">CONTACTO</a></li>
-            <li><a class="btn" href="pages/ubicacion.html">UBICACIÓN</a></li>
-          </ul>
-        </footer>
-      </article>
+      
       <!-- ################################################################################################ -->
-    </div>
+      <h6 class="heading">GALERÍA DE FOTOS</h6>
+      <hr style="color: #0056b2;" />
+      <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 25%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+<div style="text-align:center">
+  <h2>MÁS IMÁGENES AQUÍ</h2>
+  <p>Aprieta las imágenes de abajo:</p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="tabgal.jpg" alt="Bikini" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="tabgal2.png" alt="Snow" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="tabgal3.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="img_lights.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
+
+<script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script>
+
+      <!-- ################################################################################################ -->
+    </section>
   </div>
   <!-- ################################################################################################ -->
 </div>
@@ -109,22 +194,10 @@ if (respuesta) {
 <div class="wrapper row3">
   <main class="hoc container clear"> 
     <!-- main body -->
-    <!-- ################################################################################################ -->
-    <h2>MÁS INFORMACIÓN SOBRE TIENDA WI:</h2>
-    <iframe width="677" height="381" src="https://www.youtube.com/embed/6vtJIecnfe4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <!-- ################################################################################################ -->
-  </footer>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <a href="#top"><p align=center><strong></strong></a></p>
-    <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+
+      <!-- ################################################################################################ -->
+     <!-- Full-width images with number and caption text -->
+  
     <!-- ################################################################################################ -->
   </div>
 </div>
@@ -133,8 +206,8 @@ if (respuesta) {
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="../layout/scripts/jquery.min.js"></script>
+<script src="../layout/scripts/jquery.backtotop.js"></script>
+<script src="../layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
